fixed double scroll bar

--- a/5051/Content/Login.css
+++ b/5051/Content/Login.css
@@ -42,9 +42,7 @@
     background-image: url("../Content/img/nightimeBackground.png");
 }
 
-html {
-    overflow-y: scroll;
-}
+
 
 
 a {
